# City_Life_Core

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: additional-context.md  bug_report.md  config.yml  custom.md  feature_request.md
.github/workflows/: ci.yml
apps/clc_runner/: main.cpp
benchmarks/: CMakeLists.txt  README.md  core_benchmarks.cpp
cmake/: CityLifeCoreConfig.cmake.in
data/demo_fantasy/: README.md  core.clcd
docs/: ARCHITECTURE.md  BUILD_AND_LINKING_POLICY.md  CI_ARTIFACT_REVIEW.md  CMAKE_PACKAGE.md  COMPATIBILITY.md  CORE_CONCEPTS.md  C_ABI.md  MIGRATION.md  PACKAGING.md  PROTECTION_STRATEGY.md  PUBLIC_API.md  PUBLIC_API_STATUS.md  READINESS_STATUS.md  README.md  RELEASE_BLOCKERS.md  RELEASE_CHECKLIST.md  RELEASE_MANIFEST_1.0.0.md  RELEASE_MANIFEST_DRAFT_0.9.9.md  RELEASE_MANIFEST_DRAFT_1.0.0.md  RELEASE_MANIFEST_TEMPLATE.md  RELEASE_NOTES_0.9.3.md  RELEASE_NOTES_0.9.4.md  RELEASE_NOTES_0.9.5.md  RELEASE_NOTES_0.9.6.md  RELEASE_NOTES_0.9.7.md  RELEASE_NOTES_0.9.9.md  RELEASE_NOTES_1.0.0.md  ROADMAP.md  SDK_STRUCTURE.md  SDK_ZIP_PACKAGE.md  VERIFYING_RELEASES.md  VERSIONING.md  action-bridge.md  architecture.md  browser-wasm.md  build-and-linking-policy.md  c-abi-expansion-plan.md  c-abi.md  ci-artifact-review.md  cmake-package.md  (+27 more)
docs/ru/: README.md
examples/: CMakeLists.txt  README.md  action_bridge.cpp  basic_runtime.cpp  custom_data_registry.cpp  faction_ownership_contracts.cpp  full_runtime_flow.cpp  replay_persistence.cpp  save_load_roundtrip.cpp  tick_runtime.cpp  validation_hardening.cpp
examples/c_abi_consumer/: CMakeLists.txt  README.md  main.c
examples/csharp_unity/: CityLifeCoreNative.CompileCheck.csproj  CityLifeCoreNative.cs  CityLifeNativeDiagnostics.cs  CityLifeSmokeTest.cs  CityLifeWorldSafeAccess.cs  README.md
examples/find_package_consumer/: CMakeLists.txt  README.md  main.cpp
include/clc/: CityLifeCore.hpp
include/clc/c/: CityLifeCoreC.h
include/clc/core/: EventLog.hpp  Ids.hpp  Result.hpp  Time.hpp  Version.hpp  World.hpp
include/clc/data/: DataPackLoader.hpp  DataRegistry.hpp  Definitions.hpp  Validation.hpp
include/clc/economy/: Ledger.hpp  Market.hpp  Orders.hpp  Trade.hpp
include/clc/sim/: ActionBridge.hpp  Caravans.hpp  ContractRewards.hpp  Contracts.hpp  Factions.hpp  Ownership.hpp  Routes.hpp  ScenarioCatalog.hpp  Settlement.hpp  SimulationEngine.hpp  SimulationPersistence.hpp  SimulationRuntime.hpp  SimulationRuntimeEvents.hpp  SimulationRuntimePersistenceValidation.hpp  SimulationRuntimeScenario.hpp  SimulationRuntimeTick.hpp  SimulationRuntimeWorkflow.hpp  Storage.hpp
scripts/: README.md  manual_release_validation.ps1  manual_release_validation.sh  validate_csharp_wrapper.ps1  validate_csharp_wrapper.sh
src/clc/c/: CityLifeCoreC.cpp
src/clc/core/: EventLog.cpp  Time.cpp  Version.cpp  World.cpp
src/clc/data/: DataPackLoader.cpp  DataRegistry.cpp  Validation.cpp
src/clc/economy/: Ledger.cpp  Market.cpp  Orders.cpp  Trade.cpp
src/clc/sim/: ActionBridge.cpp  Caravans.cpp  ContractRewards.cpp  Contracts.cpp  Factions.cpp  Ownership.cpp  Routes.cpp  Settlement.cpp  SimulationEngine.cpp  SimulationPersistence.cpp  SimulationRuntimeEvents.cpp  SimulationRuntimePersistence.cpp  SimulationRuntimePersistenceValidation.cpp  SimulationRuntimeScenario.cpp  SimulationRuntimeTick.cpp  SimulationRuntimeWorkflow.cpp  SimulationWorldStateLedgerRestore.cpp  SimulationWorldStatePersistence.cpp  SimulationWorldStateRuntimeBridge.cpp  SimulationWorldStateValidation.cpp  Storage.cpp
tests/: CMakeLists.txt  action_bridge_determinism_tests.cpp  action_bridge_tests.cpp  c_abi_smoke_tests.c  caravans_tests.cpp  contract_reward_ledger_tests.cpp  contract_reward_transaction_tests.cpp  contract_tick_deadline_tests.cpp  contracts_tests.cpp  data_pack_loader_hardening_tests.cpp  data_registry_hardening_tests.cpp  diagnostics_consistency_tests.cpp  economy_tests.cpp  engine_command_result_tests.cpp  engine_lookup_tests.cpp  engine_state_tests.cpp  faction_ownership_hardening_tests.cpp  factions_tests.cpp  ledger_hardening_tests.cpp  market_hardening_tests.cpp  ownership_tests.cpp  persistence_tests.cpp  resource_command_tests.cpp  routes_tests.cpp  runtime_arrival_contract_roundtrip_tests.cpp  runtime_arrival_contract_tests.cpp  runtime_auto_contract_tests.cpp  runtime_cargo_delivery_persistence_tests.cpp  runtime_cargo_delivery_result_validation_tests.cpp  runtime_corrupted_save_tests.cpp  runtime_event_log_absolute_tick_tests.cpp  runtime_event_log_analysis_tests.cpp  runtime_event_log_roundtrip_tests.cpp  runtime_event_log_runtime_time_overload_tests.cpp  runtime_event_log_tests.cpp  runtime_full_roundtrip_tests.cpp  runtime_legacy_time_restore_tests.cpp  runtime_load_failure_no_mutation_tests.cpp  runtime_persistence_tests.cpp  runtime_persistence_validation_tests.cpp  (+26 more)
